--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "moment": "^2.29.4",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "firebase-admin": "^11.8.0"
   }
 }
